0.24.6	2025-10-17

 * Add support for octopus merge strategy. (Jelmer Vernooĳ, #1816)

 * Add support for ``git show-branch`` command to display branches and their

 * Add ``dulwich cherry`` command to find commits not merged upstream.
   Compares commits by patch ID to identify equivalent patches regardless of
   commit metadata. Supports automatic upstream detection from tracking branches
   and verbose mode to display commit messages. (Jelmer Vernooĳ, #1782)

 * Add support for ``git mailsplit`` command to split mbox files and Maildir
   into individual message files. Supports mboxrd format, custom precision,
   and all standard git mailsplit options. (Jelmer Vernooĳ, #1840)

 * Implement recursive merge strategy for handling multiple merge bases
   (criss-cross merges). When multiple common ancestors exist, the algorithm
   creates a virtual merge base by recursively merging them, reducing false
   conflicts in complex merge scenarios. The recursive strategy is now used
   automatically by ``porcelain.merge()``. (Jelmer Vernooĳ, #1815)

 * Add support for ``dulwich show-branch`` command to display branches and their
   commits. Supports filtering by local/remote branches, topological ordering,
   list mode, independent branch detection, and merge base calculation.
   (Jelmer Vernooĳ, #1829)

 * Add ``dulwich config`` command to get and set repository or global
   configuration options. Supports getting/setting values, listing all config,
   getting all values for multivars, and unsetting values.
   (Jelmer Vernooĳ, #1775)

0.24.5	2025-10-15

 * Add support for ``dulwich show-ref`` command to list references in a local
   repository. Supports filtering by branches/tags, pattern matching,
   dereferencing tags, verification mode, and existence checking. Available
   as ``porcelain.show_ref()`` and ``dulwich show-ref`` CLI command.
   (Jelmer Vernooĳ, #1830)

 * Fix HTTP authentication to preserve credentials from URLs when storing